# policy_agent

./: .env.example  .gitignore  AI_CONFIG_PROMPTS.md  ANALYSIS_REPORT_TEST_RESULTS.md  AWS_BEDROCK.md  AWS_SSO_SETUP.md  BEDROCK_RAG.md  EVALUATION_PROMPTS.md  FORMAL_ANALYSIS_REPORT.md  GUARDED_RELEASE_DEMO_PLAN.md  LAUNCHDARKLY.md  LAUNCHDARKLY_FALLBACK_SETUP.md  LICENSE  Makefile  OBSERVABILITY.md  OBSERVABILITY_ISSUE.md  PROMPT_EXAMPLES.md  PROMPT_IMPROVEMENTS.md  PROVIDER_AGENT_PROMPT_FIX.md  QUICKSTART.md  RAG_IMPLEMENTATION_SUMMARY.md  RAG_MECHANICS_RECOMMENDATIONS.md  RAG_SETUP_GUIDE.md  RAG_STRUCTURAL_ISSUES.md  RAG_STRUCTURAL_ISSUES_REVISED.md  README.md  README_CHATBOT.md  SDD.md  SIMULATED_GUARDRAILS.md  TEST_SUITE_README.md  TOOLS_LIBRARY_README.md  TOOLS_UPLOAD_INSTRUCTIONS.md  UI_INTEGRATION.md  UI_INTEGRATION_GUIDE.md  ai_config_prompts.json  analyze_rag_mechanics.py  analyze_test_results.py  api_server.py  api_wrapper.py  aws-sso-login.sh  (+37 more)
LD-ai-rag-nt-togglehealth/: README.md  TOGGLEHEALTH_TRANSFORMATION.md  env.template  tailwind.config.js
bedrock_setup/: QUICK_START.md  README_BEDROCK_SETUP.md  setup_s3_buckets.sh
data/: CONSISTENCY_REVIEW.md  README.md  togglehealth_policy_database.json  togglehealth_provider_database.json
examples/: run_example.py
scripts/: README.md
simulations/: README.md  guarded_release_accuracy_simulator.py  simulate_experiments.py
src/: __init__.py
test_data/: qa_dataset.json  qa_dataset_demo.json
test_results/: .gitignore  analysis_report.txt  deep_failure_analysis.txt  rag_mechanics_analysis.txt  (+46 more)
ui/: .gitignore  (+2 more)
(+776 files in other folders)
